--- a/tfl_to_blog/tfl_download.ipynb
+++ b/tfl_to_blog/tfl_download.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import io\n",
     "import os.path\n",
+    "import re\n",
     "\n",
     "import google.auth\n",
     "from google.auth.transport.requests import Request\n",
@@ -186,6 +187,71 @@
     "creds = Credentials.from_authorized_user_file(\"token.json\", SCOPES)\n",
     "service = build(\"drive\", \"v3\", credentials=creds)\n",
     "traverse_folders(service, FEELINGS_LAB_FOLDER, '', FOLDERS_TO_TRAVERSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'groups'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb Cell 5\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m             \u001b[39m# rename the file\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m             os\u001b[39m.\u001b[39mrename(file_path, new_file_path)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m rename_files_in_folder(\u001b[39m'\u001b[39;49m\u001b[39maudio\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;32m/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb Cell 5\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m \u001b[39m# if the file is a .wav file\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39mif\u001b[39;00m file_path\u001b[39m.\u001b[39mendswith(\u001b[39m'\u001b[39m\u001b[39m.wav\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m     \u001b[39m# get the standardized file name\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m     new_file_name \u001b[39m=\u001b[39m standardize_file_name(file)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m     \u001b[39m# get the full path of the new file name\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m     new_file_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(folder_path, new_file_name)\n",
+      "\u001b[1;32m/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m season \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mS2\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m season_match \u001b[39mand\u001b[39;00m season_match\u001b[39m.\u001b[39mgroup(\u001b[39m1\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m2\u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mS1\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m# get the first non-None group from the episode match\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     episode \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         \u001b[39mint\u001b[39m(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m             \u001b[39mnext\u001b[39m(\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m                 (group \u001b[39mfor\u001b[39;00m group \u001b[39min\u001b[39;00m episode_match\u001b[39m.\u001b[39;49mgroups() \u001b[39mif\u001b[39;00m group \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m                 \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m             )\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m         )\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     )\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     \u001b[39m# if no episode number is found, raise an error\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jerhadf/Desktop/coding/hume_hacks/tfl_to_blog/tfl_download.ipynb#W4sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpisode number not found in file name: \u001b[39m\u001b[39m{\u001b[39;00mfile_name\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'groups'"
+     ]
+    }
+   ],
+   "source": [
+    "def standardize_file_name(file_name):\n",
+    "    # split the file name into base name and extension\n",
+    "    base_name, ext = os.path.splitext(file_name)\n",
+    "    # find the season number\n",
+    "    season_match = re.search(r\"S(\\d+)\", base_name, re.IGNORECASE)\n",
+    "    # find the episode number\n",
+    "    episode_match = re.search(\n",
+    "        r\"Ep(\\d+)|Episode(\\d+)|S\\d+E(\\d+)|TFL_(\\d+)\", base_name, re.IGNORECASE\n",
+    "    )\n",
+    "    # if season number is 2, set season to \"S2\", else set to \"S1\"\n",
+    "    season = \"S2\" if season_match and season_match.group(1) == \"2\" else \"S1\"\n",
+    "    try:\n",
+    "        # get the first non-None group from the episode match\n",
+    "        episode = str(\n",
+    "            int(\n",
+    "                next(\n",
+    "                    (group for group in episode_match.groups() if group is not None),\n",
+    "                    None,\n",
+    "                )\n",
+    "            )\n",
+    "        )\n",
+    "    except TypeError:\n",
+    "        # if no episode number is found, raise an error\n",
+    "        raise ValueError(f\"Episode number not found in file name: {file_name}\")\n",
+    "    # return the standardized file name\n",
+    "    return f\"TFL_{season}E{episode}{ext}\"\n",
+    "\n",
+    "def rename_files_in_folder(folder_path):\n",
+    "    # get all files in the folder\n",
+    "    files = os.listdir(folder_path)\n",
+    "    for file in files:\n",
+    "        # get the full path of the file\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        # if the file is a .wav file\n",
+    "        if file_path.endswith('.wav'):\n",
+    "            # get the standardized file name\n",
+    "            new_file_name = standardize_file_name(file)\n",
+    "            # get the full path of the new file name\n",
+    "            new_file_path = os.path.join(folder_path, new_file_name)\n",
+    "            # rename the file\n",
+    "            os.rename(file_path, new_file_path)\n",
+    "\n",
+    "rename_files_in_folder('audio')\n"
    ]
   }
  ],
