--- a/tfl_to_blog/tfl_transcribe.ipynb
+++ b/tfl_to_blog/tfl_transcribe.ipynb
@@ -28,24 +28,28 @@
     "\n",
     "def standardize_file_name(file_name):\n",
     "    base_name = os.path.splitext(file_name)[0]\n",
-    "    season_match = re.search(r\"S(\\d+)\", base_name, re.IGNORECASE)\n",
-    "    episode_match = re.search(\n",
-    "        r\"Ep(\\d+)|Episode(\\d+)|S\\d+E(\\d+)|TFL_(\\d+)\", base_name, re.IGNORECASE\n",
-    "    )\n",
-    "    season = \"S2\" if season_match and season_match.group(1) == \"2\" else \"S1\"\n",
-    "    try:\n",
-    "        episode = str(\n",
-    "            int(\n",
-    "                next(\n",
-    "                    (group for group in episode_match.groups() if group is not None),\n",
-    "                    None,\n",
+    "    # check if the file name matches the format \"TFL_S2E22.wav\"\n",
+    "    match = re.match(r\"TFL_S(\\d+)E(\\d+)\", base_name, re.IGNORECASE)\n",
+    "    if match:\n",
+    "        return f\"TFL_S{match.group(1)}E{match.group(2)}_transcript.txt\"\n",
+    "    else:\n",
+    "        season_match = re.search(r\"S(\\d+)\", base_name, re.IGNORECASE)\n",
+    "        episode_match = re.search(\n",
+    "            r\"Ep(\\d+)|Episode(\\d+)|S\\d+E(\\d+)|TFL_(\\d+)\", base_name, re.IGNORECASE\n",
+    "        )\n",
+    "        season = \"S2\" if season_match and season_match.group(1) == \"2\" else \"S1\"\n",
+    "        try:\n",
+    "            episode = str(\n",
+    "                int(\n",
+    "                    next(\n",
+    "                        (group for group in episode_match.groups() if group is not None),\n",
+    "                        None,\n",
+    "                    )\n",
     "                )\n",
     "            )\n",
-    "        )\n",
-    "    except TypeError:\n",
-    "        raise ValueError(f\"Episode number not found in file name: {file_name}\")\n",
-    "    return f\"TFL_{season}E{episode}_transcript.txt\"\n",
-    "\n",
+    "        except TypeError:\n",
+    "            raise ValueError(f\"Episode number not found in file name: {file_name}\")\n",
+    "        return f\"TFL_{season}E{episode}_transcript.txt\"\n",
     "\n",
     "def transcribe_audio(file_name):\n",
     "    \"\"\"Transcribe a .wav file using OpenAI's Whisper API and save the transcript.\n",
